# pytvpaint

./: .gitignore  404.html  LICENSE  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  package.py  pyproject.toml  sitemap.xml
.github/workflows/: check.yml  docs-deploy.yml  pypi.yml  tests.yml
api/client/communication/: index.html
api/client/parsing/: index.html
api/client/rpc/: index.html
api/george/camera/: index.html
api/george/clip/: index.html
api/george/exceptions/: index.html
api/george/layer/: index.html
api/george/misc/: index.html
api/george/project/: index.html
api/george/scene/: index.html
api/objects/camera/: index.html
api/objects/clip/: index.html
api/objects/clip_sound/: index.html
api/objects/layer/: index.html
api/objects/layer_color/: index.html
api/objects/layer_instance/: index.html
api/objects/project/: index.html
api/objects/project_sound/: index.html
api/objects/scene/: index.html
api/utils/: index.html
contributing/developer_setup/: index.html
contributing/internals/: index.html
contributing/modify_objects/: index.html
contributing/wrap_george/: index.html
cpp/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  index.html  library.def  pyproject.toml
cpp/building/: index.html
cpp/src/: main.cpp  queue.hpp  rpc.cpp  rpc.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
credits/: index.html
docs/: credits.md  index.md  installation.md  limitations.md  logo.md  usage.md
docs/api/: utils.md
docs/api/client/: communication.md  parsing.md  rpc.md
docs/api/george/: camera.md  clip.md  exceptions.md  layer.md  misc.md  project.md  scene.md
docs/api/objects/: camera.md  clip.md  clip_sound.md  layer.md  layer_color.md  layer_instance.md  project.md  project_sound.md  scene.md
docs/contributing/: developer_setup.md  how_it_works.md  internals.md  modify_objects.md  wrap_george.md
docs/cpp/: building.md  index.md
docs/stylesheets/: extra.css
docs/usage/: rendering.md  usage.md
installation/: index.html
limitations/: index.html
overrides/partials/: copyright.html
python/pytvpaint/: __init__.py  camera.py  clip.py  layer.py  project.py  scene.py  sound.py  utils.py
python/pytvpaint/george/: __init__.py  base.py  camera.py  clip.py  exceptions.py  layer.py  project.py  scene.py
python/pytvpaint/george/client/: __init__.py  parse.py  rpc.py
pytvpaint/: __init__.py  camera.py  clip.py  layer.py  project.py  scene.py  sound.py  utils.py
pytvpaint/george/: __init__.py  base.py  clip.py  exceptions.py  grg_base.py  grg_camera.py  grg_clip.py  grg_layer.py  grg_project.py  grg_scene.py
pytvpaint/george/client/: __init__.py  parse.py  rpc.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_camera.py  test_clip.py  test_clip_sound.py  test_layer.py  test_layer_instance.py  test_project.py  test_project_sound.py  test_scene.py  test_utils.py
tests/george/: test_base.py  test_camera.py  test_clip.py  test_grg_base.py  test_grg_camera.py  test_grg_clip.py  test_grg_layer.py  test_grg_project.py  test_grg_scene.py  test_layer.py  test_project.py  test_scene.py  test_utils.py
tests/george/client/: test_init.py  test_parse.py  test_rpc.py
usage/rendering/: index.html
usage/usage/: index.html
